--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "live-server"
+    "front": "live-server",
+    "back": "json-server --watch db.json"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/mathvbarone/projeto-caelum#readme",
   "dependencies": {
+    "json-server": "^0.12.0",
     "live-server": "^1.2.0"
   }
 }
